added search input

--- a/src/pages/ProductsPage/ProductsPage.scss
+++ b/src/pages/ProductsPage/ProductsPage.scss
@@ -103,7 +103,7 @@
     gap: 15px;
 
     &::before {
-      // @include icon(30px, '../static/search__icon.svg');
+      @include icon(30px, '../static/icons/icon__search.svg');
       transition: transform 0.3s;
 
       @include onTablet {
