--- a/src/sassStyles/_colors.scss
+++ b/src/sassStyles/_colors.scss
@@ -5,3 +5,4 @@ $color__accent: #635fc7;
 $color__accent--hover: #5754b4;
 $color__border: rgba(130, 143, 163, 0.25);
 $color__modal-form: #2b2c37;
+$color__error: #ea5555;
