added success modal to form

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 // Blocks
 @import './sassStyles/blocks/page';
 @import './sassStyles/blocks/container';
+@import './sassStyles/blocks/btn';
 
 :root {
   font-family: 'Roboto', sans-serif;
