--- a/src/components/ProductsPage/NewProductForm/NewProductForm.scss
+++ b/src/components/ProductsPage/NewProductForm/NewProductForm.scss
@@ -1,8 +1,10 @@
 @import '../../../sassStyles/colors';
 @import '../../../sassStyles/mixins';
+@import '../../../sassStyles/keyframes';
 
 .new-product-form {
   $form: &;
+  position: relative;
 
   width: 100%;
   max-width: 550px;
@@ -10,6 +12,28 @@
 
   background-color: $color__modal-form;
   border-radius: 6px;
+
+  overflow: hidden;
+
+  &__loader {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+
+    &::before {
+      @include icon(40px, '../static/icons/icon__loader.png');
+
+      animation: rotate 2s infinite;
+    }
+  }
 
   &__header {
     display: flex;
@@ -102,26 +126,5 @@
     display: none;
   }
 
-  // SEND
-  &__send {
-    display: block;
-    width: 100%;
-    height: 40px;
-
-    max-width: 300px;
-    margin: 0 auto;
-
-    font-size: 13px;
-    font-weight: 700;
-    color: $color__text--main;
-
-    background-color: $color__accent;
-    border-radius: 20px;
-
-    transition: background-color 0.3s;
-
-    &:hover {
-      background-color: $color__accent--hover;
-    }
-  }
+  // SUBMIT
 }
